fixed pages that had extra margin

--- a/src/styles/salesRepresentatives.scss
+++ b/src/styles/salesRepresentatives.scss
@@ -1,6 +1,5 @@
 .salesRepresentativesContainer {
   background-color: white;
-  margin-top: 80px;
 }
 
 .salesRepresentatives_main {
